<resources>
    <string name="app_name">RepasoParcMoviles2023</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv1">Smart App\n</string>
    <string name="tv2">Ingrese su correo electrónico</string>
    <string name="tv3">Ingrese su clave</string>
    <string name="btn1">Ingresar</string>
    <string name="emailhint">Enter your Email</string>
    <string name="passwordhint">Password</string>
    <string name="tvopciones">Opciones</string>
</resources>